# smbhb-inspiral

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  environment.yml  pyproject.toml
data/: PROVENANCE.md  nanograv_15yr_sensitivity.csv
docs/: equations.md
src/smbhb_inspiral/: __init__.py  animation.py  constants.py  em_detectability.py  physics.py  plotting.py  sensitivity.py  waveform.py
src/smbhb_inspiral/data/: __init__.py
src/smbhb_inspiral/scripts/: make_animation.py  regenerate_all_figures.py  run_inspiral.py  run_parameter_scan.py
tests/: test_animation.py  test_em_detectability.py  test_integration.py  test_physics.py  test_sensitivity.py  test_waveform.py
