[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "smbhb-inspiral"
version = "0.1.0"
description = "Post-Newtonian gravitational wave inspiral simulator for supermassive black hole binaries"
authors = [{ name = "Karan" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.11,<2",
    "matplotlib>=3.8,<4",
    "astropy>=6.0,<8",
    "h5py>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "hypothesis>=6.100,<7",
    "mypy>=1.10,<2",
    "ruff>=0.5,<1",
    "black",
    "pre-commit",
]

[project.scripts]
smbhb-inspiral = "smbhb_inspiral.scripts.run_inspiral:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: mark test as slow (deselect with -m \"not slow\")",
]

[tool.mypy]
strict = true
packages = ["smbhb_inspiral"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "B", "SIM"]

[tool.black]
line-length = 99
